--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	</head>
 	<body>
 
-        <div id="info">Description</div>
 
 
 
 
 
 
-		<script type="module" src="text"></script>
+
+		<script type="module" src="bgobjects"></script>
 	</body>
 </html>
