--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 
 
 
-		<script type="module" src="shadows"></script>
+		<script type="module" src="particleAnimation"></script>
 	</body>
 </html>
